--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 					// console.log(node);
 					for(var i=1;i<node[last_code].path.length;i++)
 					{
-						console.log("ต่อที่ "+i+" : "+station_obj[node[last_code].path[i-1]].name+" --> "+station_obj[node[last_code].path[i]].name);
+						console.log("ต่อที่ "+i+" : "+station_obj[node[last_code].path[i-1]].name+" --> "+station_obj[node[last_code].path[i]].name+" ("+Math.abs(station_obj[node[last_code].path[i-1]].km-station_obj[node[last_code].path[i]].km)+" km.)");
 						for(var j=0;j<link[node[last_code].path[i-1]][node[last_code].path[i]].length;j++)
 						{
 							console.log(time_display(link[node[last_code].path[i-1]][node[last_code].path[i]][j][0])+" --> "+time_display(link[node[last_code].path[i-1]][node[last_code].path[i]][j][1])+" ("+time_display(link[node[last_code].path[i-1]][node[last_code].path[i]][j][1]-link[node[last_code].path[i-1]][node[last_code].path[i]][j][0])+") | Train no. "+link[node[last_code].path[i-1]][node[last_code].path[i]][j][2]);
