--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 							}
 						});
 					}
-					// console.log("Search Time "+(Date.now()-start_time)+" ms.");////////// Finish Search Time //////////
+					console.log("Search Time "+(Date.now()-start_time)+" ms.");////////// Finish Search Time //////////
 					// console.log(node[last_code].path);
 					// console.log(node);
 					for(var i=1;i<node[last_code].path.length;i++)
